@@ -93,4 +93,42 @@ test
 
 	]
 
+	AREA Data, DATA
+	[ :LNOT: REFERENCE
+	MACRO
+$lbl	LblTst $lbln
+$lbl	= "$lbln: ", :STR: :DEF: $lbln, "\n"
+	MEND
+
+Foo1
+	LblTst Foo1
+Foo2	LblTst Foo2
+	LblTst Foo3
+Foo3
+
+01
+	LblTst %FT01
+02	LblTst %FT02
+	LblTst %FT03
+03
+
+11
+	LblTst %BT11
+12	LblTst %BT12
+;;	LblTst %BT13	; FIXME: this results in missing label but we're only doing :DEF: so this should give that error
+;;13
+	|
+	= "Foo1: T\n"
+	= "Foo2: T\n"
+	= "Foo3: T\n"
+
+	= "%FT01: F\n"
+	= "%FT02: F\n"
+	= "%FT03: T\n"
+
+	= "%BT11: T\n"
+	= "%BT12: T\n"
+;;	= "%BT13: F\n"
+	]
+
 	END
